--- a/gtk-3.0/widgets/_header-bars.scss
+++ b/gtk-3.0/widgets/_header-bars.scss
@@ -124,10 +124,15 @@ headerbar {
       &:active,
       &:checked,
       &:backdrop,
-      &:backdrop:hover,* {
+      &:backdrop:hover {
         color: transparent;
         box-shadow: none;
         background-color: transparent;
+      }
+
+      image,
+      label {
+        color: $fg_color;
       }
     }
   }
